examples/test/testpolicy17518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17518
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key13: value1
      key37: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value17
          key29: value10
          key7: value6
      podSelector:
        matchLabels:
          key22: value22
          key8: value1
          key26: value43
